syntax = "proto3";

import "google/protobuf/empty.proto";

option go_package = "api/grpc/v1/event_store;event_store_grpc_service";

message DeleteEventStoreStreamRequest {
  string tenant = 1;
  string type = 2;
  string id = 3;
  int64 minutesUntilDeletion = 4;
}

service EventStoreGrpcService {
  rpc DeleteEventStoreStream(DeleteEventStoreStreamRequest) returns (google.protobuf.Empty);
}